--- a/package.json
+++ b/package.json
@@ -6,8 +6,24 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.7",
+        "autoprefixer": "^10.4.16",
         "axios": "^1.6.1",
         "laravel-vite-plugin": "^0.8.0",
+        "postcss": "^8.4.31",
+        "tailwindcss": "^3.3.5",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@googlemaps/js-api-loader": "^1.16.2",
+        "@toast-ui/editor": "^3.2.2",
+        "@toast-ui/editor-plugin-color-syntax": "^3.1.0",
+        "@toast-ui/editor-plugin-table-merged-cell": "^3.1.0",
+        "bootstrap-icons": "^1.11.1",
+        "chart.js": "^4.4.0",
+        "flowbite": "^2.1.1",
+        "jsqr": "^1.4.0",
+        "qr-code-styling": "^1.6.0-rc.1",
+        "swiper": "^11.0.4"
     }
 }
